--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <!--CARDS-->
     <div class="container">
       <div class="d-flex justify-content-center mb-5 row">
-        <div class="card col-12 col-lg-6" style="width: 18rem;">
+        <div class="card col-12 col-lg-6 m-1" style="width: 18rem;">
           <img src="images/coaching_emprendedores_kzw7is.jpg" alt="Emprendedores - ph@daniel-thomas/unsplash" class="rounded imagen-coach mt-2">
           <div class="card-body text-center">
             <h5 class="card-title">Emprendedores</h5>
@@ -59,7 +59,7 @@
           </div>
         </div>
 
-        <div class="card col-12 col-lg-6" style="width: 18rem;">
+        <div class="card col-12 col-lg-6 m-1" style="width: 18rem;">
           <img src="images/coaching_empresarios_qymrmj.jpg" alt="Empresarios- ph@charles-forerunner/Unplash" class="rounded imagen-coach mt-2">
           <div class="card-body text-center">
             <h5 class="card-title">Empresarios</h5>
@@ -70,7 +70,7 @@
           </div>
         </div>
 
-        <div class="card col-12 col-lg-6" style="width: 18rem;">
+        <div class="card col-12 col-lg-6 m-1" style="width: 18rem;">
           <img src="images/coaching_estudiantes_dmtxa7.jpg" alt="Estudiantes - @phelement5/Unsplashh" class="rounded imagen-coach mt-2">
           <div class="card-body text-center">
             <h5 class="card-title">Estudiantes</h5>
@@ -81,7 +81,7 @@
           </div>
         </div>
 
-        <div class="card col-12 col-lg-6" style="width: 18rem;">
+        <div class="card col-12 col-lg-6 m-1" style="width: 18rem;">
           <img src="images/coaching_viajeros_udunei.jpg" alt="Viajeros - @ph:shkira-auf-der-heide/Unsplash" class="rounded imagen-coach mt-2">
           <div class="card-body text-center">
             <h5 class="card-title">Viajeros</h5>
